# ZINC

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  io.h  mat2.h  mat3.h  mat4.h  transformation.h  types.h  vec2.h  vec2i.h  vec3.h  vec3i.h  vec4.h  vec4i.h  zinc.h
src/: camera.c  io.c  mat2.c  mat3.c  mat4.c  transformation.c  vec2.c  vec2i.c  vec3.c  vec3i.c  vec4.c  vec4i.c
